commit the start of adding a method to a class we create and add code to the method